sidebar overflow bug fixed

--- a/assets/styles/detail.css
+++ b/assets/styles/detail.css
@@ -186,6 +186,10 @@ ul li {
     color: #FFF;
     padding: 0 10px;
     text-shadow: 1px 1px 2px black;
+    overflow: hidden;
+    word-break: keep-all;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .sidebar-content a:hover{
     background: #b82995;
